# ov_nav

./: .gitignore  README.md
ros2_ws/src/mapping/: CMakeLists.txt  package.xml
ros2_ws/src/mapping/config/: mapper_params_online_async.yaml  nav2_params_changed.yaml
ros2_ws/src/mapping/launch/: sim_mapping.launch.py  sim_navigation.launch.py
ros2_ws/src/mapping/maps/: first_map.pgm  first_map.yaml
ros2_ws/src/mapping/rviz/: rviz_mapping.rviz  rviz_navigation.rviz
ros2_ws/src/relay_package/: package.xml  setup.cfg  setup.py
ros2_ws/src/relay_package/relay_package/: data_recorder2.py  publish_pose.py
ros2_ws/src/robot_description/: CMakeLists.txt  LICENSE  README.md  package.xml
ros2_ws/src/robot_description/launch/: display.launch.py
ros2_ws/src/robot_description/meshes/: Room.stl  base.stl  blue_tyre.stl  room.wrl
ros2_ws/src/robot_description/rviz/: robot_display.rviz
ros2_ws/src/robot_description/urdf/: camera.xacro  depth_camera.xacro  gazebo_control.xacro  laser.urdf.xacro  properties.xacro  robot.sdf  robot.urdf  robot.urdf.xacro
ros2_ws/src/robot_simulation/: CMakeLists.txt  package.xml
ros2_ws/src/robot_simulation/config/: gz_bridge.yaml
ros2_ws/src/robot_simulation/launch/: launch_gazebo.launch.py
ros2_ws/src/robot_simulation/worlds/: empty.sdf  (+1 more)
ros_vlmap_bridge/: data_recorder2.py  npy_nav2_map.py  vlmap_to_nav2.py
vlmap/: README.md  clip_test.py  demo.ipynb  lseg_test.ipynb  map_test.ipynb  pyproject.toml
vlmap/examples/: clip_mapping_lseg_from_scratch_batch.py
vlmap/utils/: clip_mapping_utils.py  clip_utils.py
