[project]
name = "vlmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clip",
    "colorlog>=6.10.1",
    "grad-cam>=1.5.5",
    "h5py>=3.16.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pytorch-lightning>=2.6.1",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torch-encoding",
    "tqdm>=4.67.3",
    "wandb>=0.27.0",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
torch-encoding = { git = "https://github.com/zhanghang1989/PyTorch-Encoding/" }
